--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
         "babel-loader": "^6.3.2",
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-react": "^6.24.1",
-        "express": "^4.14.1",
+        "express": "^4.15.2",
         "matter-js": "^0.12.0",
         "pixi.js": "^4.4.0",
+        "react": "^15.5.4",
+        "react-dom": "^15.5.4",
         "webpack": "^2.2.1"
     },
     "scripts": {
@@ -20,8 +22,5 @@
         "build": "ENVIRONMENT=production node node_modules/webpack/bin/webpack.js -p && cp index.html build/ && cp -r img build/"
     },
     "author": "",
-    "dependencies": {
-        "react": "^15.5.4",
-        "react-dom": "^15.5.4"
-    }
+    "dependencies": {}
 }
